--- a/views/custommerPage.ejs
+++ b/views/custommerPage.ejs
@@ -16,9 +16,9 @@
                         <div class="container-fluid w-100 col-lg-6 col-sm-12  rounded border flex-wrap" style="background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
                              
                             <form id="<%= element.CompanyID %>" action="/custom/customSearch" method="post"> 
-                            <div class="container-fluid col-12 btn d-flex">
-                                <h6 class="col-2 text-light ">Location </h6>
-                                    <select class="col-8  btn text-light fw-lighter"  name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" id="idSearchText" >
+                            <div class="container-fluid col-12 btn d-flex  ">
+                                <h6 class="col-lg-2 text-light btn ">Location </h6>
+                                    <select class="col-lg-8  btn text-light  fw-lighter"  name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" id="idSearchText" >
                                       <option style="background-color:rgba(186, 90, 21, 0.748); font-size: large;" class="col-5 SearchTextBox text-light fw-LIGHTER" value=""> All Cities </option>
                                         <% district.forEach(element=> { %>
                                             <option style="background-color:rgba(186, 90, 21, 0.748); height: 100px;"class=" col-5 btn w-100 text-light fw-lighter" value="<%=element%>">
@@ -26,7 +26,7 @@
                                         </option>
                                       <% }) %>
                                     </select>
-                                    <button class="col-2 btn text-light bi bi-search" type="submit">
+                                    <button class="col-lg-2 btn text-light bi  bi-search" type="submit">
                                       FIND
                                     </button>
                             </div>
@@ -38,17 +38,17 @@
                         <div class="carousel-item h-100 d-flex flex-column justify-content-center align-items-start h-100" style=" background-image: url('<%= element.image1 %>'); background-position: center; background-size: cover;">
                           <div class="container-fluid w-100 col-lg-6 col-sm-12 rounded border " style="background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
                             <form id="<%= element.CompanyID %>" action="/custom/customSearch"  method="post">  
-                            <div class="container-fluid col-12 btn d-flex">
-                                <h6 class="col-2 text-light ">Location </h6>
-                                    <select class="col-8  btn text-light fw-lighter"  name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" id="idSearchText" >
+                              <div class="container-fluid col-12 btn d-flex  ">
+                                <h6 class="col-lg-2 text-light btn ">Location </h6>
+                                    <select class="col-lg-8  btn text-light  fw-lighter"  name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" id="idSearchText" >
                                       <option style="background-color:rgba(186, 90, 21, 0.748); font-size: large;" class="col-5 SearchTextBox text-light fw-LIGHTER" value=""> All Cities </option>
                                         <% district.forEach(element=> { %>
-                                        <option style="background-color:rgba(186, 90, 21, 0.748); height: 100px;"class=" col-5 btn w-100 text-light fw-lighter" value="<%=element%>">
-                                          <%=element%>
+                                            <option style="background-color:rgba(186, 90, 21, 0.748); height: 100px;"class=" col-5 btn w-100 text-light fw-lighter" value="<%=element%>">
+                                        <%=element%>
                                         </option>
                                       <% }) %>
                                     </select>
-                                    <button class="col-2 btn text-light bi bi-search me-1" type="submit">
+                                    <button class="col-lg-2 btn text-light bi  bi-search" type="submit">
                                       FIND
                                     </button>
                             </div>
