--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -171,22 +171,20 @@
                     </div>
                     <!-- ************ -->
                     <div class="container-fluid border-light d-flex rounded mb-3">
-                      
-                        <button class="border-0 rounded-start col-4 ">Username</button>
-                       <input type="text " id="Signup_User_Name" onchange="verifyUser('Signup_User_Name')" class="form-control " name="username" placeholder="Username"
-                        required>
-                        <button id="Signup_username_Bt" type="button" onclick="verifyUser('Signup_User_Name')"
+                        <button class="border-0 rounded-start col-4 " required>Password</button>
+                        <input autocomplete="new-password" onchange="verifyPassword('User_Login_password','verifyPassword_Bt' )" onselect="nothing()" id="User_Login_password"
+                        type="password" class="form-control" name="password" placeholder="password">
+                        <button id="verifyPassword_Bt" type="button" onclick="verifyPassword('Signup_User_Name','verifyPassword_Bt')"
+                        class="btn btn-outline-success bi bi-search "></button>
+                   </div>
+                 <!-- ************ -->
+                        <div hidden class="container-fluid border-light d-flex rounded mb-3">
+                            <button hidden class="border-0 rounded-start col-4 ">Username</button>
+                            <input hidden type="text " id="Signup_User_Name" onchange="verifyUser('Signup_User_Name')" class="form-control " name="username" placeholder="Username" >
+                            <button hidden id="Signup_username_Bt" type="button" onclick="verifyUser('Signup_User_Name')"
                             class="btn btn-outline-success bi bi-search "></button>
                         </div>
                     <!-- ************ -->
-                    <div class="container-fluid border-light d-flex rounded mb-3">
-                            <button class="border-0 rounded-start col-4 " required>Password</button>
-                            <input autocomplete="new-password" onchange="verifyPassword('User_Login_password','verifyPassword_Bt' )" onselect="nothing()" id="User_Login_password"
-                            type="password" class="form-control" name="password" placeholder="password">
-                            <button id="verifyPassword_Bt" type="button" onclick="verifyPassword('Signup_User_Name','verifyPassword_Bt')"
-                            class="btn btn-outline-success bi bi-search "></button>
-                    </div>
-            
                 </div>
                 <div class="container-fluid d-flex flex-wrap">
                     <div class=" container-fluid d-flex flex-wrap col-sm-12">
@@ -195,9 +193,9 @@
                         <button id="Bt_Cancel_signup" onclick="CancelEntry()" type="button"
                             class="btn btn-danger  col-sm-12 m-1 col-lg-2 bi bi-x-square"> CANCEL </button>
                         <button id="Bt_verifyOtp"  data-bs-toggle="modal" data-bs-target="#idEnterOtp" type="button"
-                            class="btn btn-primary col-lg-3   col-sm-12 m-1 bi-envelope-check-fill"> VALIDATE </button>
+                             class="btn btn-primary col-lg-3   col-sm-12 m-1 bi-envelope-check-fill"> VALIDATE </button>
                         <button id="Bt_Login_back" onclick="loadHome()" type="button"
-                            class="btn btn-success col-sm-12 m-1 col-lg-2 bi bi-person-square">LOG-IN </button>
+                            class="btn btn-success col-sm-12 m-1 col-lg-2 bi bi-person-square"> LOGIN </button>
                     </div>
                 </div>
                 <br>
@@ -258,7 +256,7 @@
         </div>
       </div>
     </div>
-  </div> 
+</div> 
  
 </body>
 </html>
