--- a/views/test.html
+++ b/views/test.html
@@ -1,8 +1,75 @@
- 
-
-
-<div class="container-fluid col-2 mt-3" id="IdProfileWallpapper" style="background-image: url('<%= user.wallPappper %>')">
- 
-</div>
-
-
+<div class="card container-flex col-3"    >
+    <form id="idFormViewReservation" action="/custom/viewReservation" method="post">
+      <div onClick="calculateTotal(${i.SpecialRent},${i.extraPerson},'${i.tariffIndex}', ${diffDays})"
+          class="card-body m-0" style="background-color:${bodycolorclass}">
+  
+          <h6 style="text-transform: uppercase;" class="card-title">${i.tariffName} : ${i.SpecialRent}/-
+          <h6 class="card-title" style="text-transform: uppercase;">${i.totalRoom-i.reservationCount} rooms available  </h6> 
+         
+              <small>(2pax)</small> <small > Extra pax:${i.extraPerson}/-</small> </h6>
+              <select id="idCheckinPlan" hidden class="input-group-text text-light btn col-2" name="roomCategoryID">
+              <option value="0">none</option>
+              </select>
+          <div class="d-flex">
+              </button>
+          </div>
+          <h4   class="card-title ">Total Amount:<small id="idTotalamount${i.tariffIndex}"> </small> </h4>
+          <div style="height: 80px; wrap:nowrap ; overflow:hidden"   id="iDtariffDiscript${i.tariffIndex}">
+              
+              <small class="card-text btn "   onClick="drilldown('iDtariffDiscript${i.tariffIndex}','80')">${i.Discription}</small>
+          </div>
+          <div class="continer-flex">
+              <div class="input-group container-flex d-flex ">
+                  <div class="input-group-prepend col-4  ">
+                      <span class="input-group-text col-12" id="basic-addon1"> Room</span>
+                  </div>
+                  <input type="Number" name="roomCount" value="${parseInt(data.RoomCount)}"
+                      onChange="calculateTotal(${i.SpecialRent},${i.extraPerson},'${i.tariffIndex}')"
+                      max="${i.totalRoom}" id="idTotalRoomReq${i.tariffIndex}" class="form-control" placeholder="Username"
+                      aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <div class="input-group container-flex d-flex ">
+                  <div class="input-group-prepend col-4  ">
+                      <span  class="input-group-text col-12" id="basic-addon1"> Guest</span>
+                  </div>
+                  <input name="guestCount" type="Number" value="${parseInt(data.GuestCount)}"
+                      onkeypress="calculateTotal(${i.SpecialRent},${i.extraPerson},'${i.tariffIndex}')"
+                      class="form-control" id="idTotalGuestOccs${i.tariffIndex}" placeholder="Username"
+                      aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+    
+              <div class="input-group container-flex d-flex ">
+                  <div class="input-group-prepend col-4 ">
+                      <span class="input-group-text col-12" id="basic-addon1">Days </span>
+                  </div>
+                  <input type="Number" class="form-control" readOnly="true"
+                      onkeypress="calculateTotal(${i.SpecialRent},${i.extraPerson},'${i.tariffIndex}')"
+                      value="${diffDays}" id="iddaycount${i.tariffIndex}" placeholder="Username" aria-label="Username"
+                      aria-describedby="basic-addon1">
+              </div>
+              <div class="input-group container-flex d-flex ">
+                  <div class="input-group-prepend col-4  ">
+                      <span class="input-group-text col-12" id="basic-addon1">arrival </span>
+                  </div>
+                  <input type="datetime-local" onChange="updateCustommerDays('${i.tariffIndex}')" class="form-control"
+                      readOnly="true" id="idarrivaldate${i.tariffIndex}" value="${data.StartDate}" placeholder="Username"
+                      aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <div class="input-group container-flex d-flex ">
+                  <div class="input-group-prepend col-4  ">
+                      <span class="input-group-text col-12" id="basic-addon1">Depart </span>
+                  </div>
+                  <small   class="text-warning"  
+                        id="idDepartureDate${i.tariffIndex}" 
+                      > ${data.EndDate} </small>
+              </div>
+          </div>
+          <button class="btn btn-warning" name="boxokingDetails" onClick="verifyUserbeforeConfirm()"
+              value="${result.CompanyID},${i.tariffIndex},${data.StartDate},${data.EndDate},${diffDays}"
+              type="button">Book Now </button>
+              <button class="btn btn-warning" name="bookingDetails" id="idconfirmReservationsbutton"  hidden
+              value="${result.CompanyID},${i.tariffIndex},${data.StartDate},${data.EndDate},${diffDays}"
+              type="submit">Book Now </button>
+      </div>
+  </form>
+  </div>
