--- a/views/Rooms.ejs
+++ b/views/Rooms.ejs
@@ -1,4 +1,6 @@
 <%- include('header') %>
+
+<%- include('MenuBarCustomer') %>
     <%- include('menubar') %>
         <div class="container-fluid ">
             <div class="container-fluid roomscontainer d-flex">
