--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,4 +1,6 @@
 <%- include('header') %>
+
+<%- include('MenuBarCustomer') %>
 <%- include('menubar') %>
 
 <div id="myDiv" value="<%= JSON.stringify(result) %>" onload="setUser(event.target.value )" >
