--- a/views/masterAdmin.ejs
+++ b/views/masterAdmin.ejs
@@ -1,4 +1,6 @@
 <%- include('header') %>
+
+<%- include('MenuBarCustomer') %>
                 <!-- Contact Start -->
                 <div class="container" id="contact">
                   <div class="">
