--- a/views/MenuBarCustomer.ejs
+++ b/views/MenuBarCustomer.ejs
@@ -12,10 +12,10 @@
         font-family: Poppins;
     }
   </style> 
-<div class="container-flex">
-  <nav class="navbar navbar-expand-lg justify-content-between " style="background-color: rgba(43, 59, 43, 0.796);">
-    <div class="container-flex text-left col-12 col-lg-6 ">
-        <small class="text text-light" style="font-size: 30px;" > Book My Trip </small> <br>
+<div class="container-flex"  >
+  <nav class="navbar navbar-expand-lg justify-content-between " style="background-color: rgba(43, 59, 43, 0.779);  ">
+    <div class="container-flex text-left col-sm-12 col-lg-6 ">
+        <small class="text text-light" style="font-size: 25px;" > Book My Trip </small> <br>
         <small class="text text-light"  >    Navigate Luxury, Book with Ease.     </small>
     </div>
     <div class="container-flex  d-flex">
@@ -23,7 +23,10 @@
         <button class="navbar-toggler text-light bi bi-list" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
           <% } else { %> 
              
-              <a type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#customerLogin" style="background-color: rgb(98, 111, 98);" class="btn btn-success me-3"> LOGIN </a>
+              <div class="btn container-flex border border-light d-flex me-3" data-bs-toggle="modal" data-bs-target="#customerLogin">
+                <a type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#customerLogin"  class="btn rounded-circle bi bi-person-fill text-light "> </a> <br>
+                <a type="button" id="idUserName" data-bs-toggle="modal" data-bs-target="#customerLogin"  class="btn text-light "> LOGIN </a>
+              </div>
         <% } %>
         </button>
         
@@ -32,19 +35,15 @@
           <div class="collapse navbar-collapse " id="navbarNav1">
             <ul class="navbar-nav align-items-start ">
               <!-- Example single danger button -->
-                <li class="nav-item  container-flex d-flex   ">
-                    
-                    <a id="idloggedusermenubar" type="button" value="<%=user.firstName%>" class="p-2 btn text-light w-100 h-100" href="/authenticate/custLogin">HOME</a>
-                    <button class="btn bi bi-house-up-fill text-warning"></button>
+                <li class="nav-item col-4 flex=wrap container-flex d-flex   ">
+                    <a id="idloggedusermenubar" type="button" value="<%=user.firstName%>" class="p-2 btn bi bi-house-up-fill  text-light w-100 h-100" href="/authenticate/custLogin"> <br>HOME</a>
                   </li>
-                <li class="nav-item  container-flex d-flex">
-                    <a id="idloggedusermenubar" type="button" value="<%=user.firstName%>" class="p-2 btn text-light w-100 h-100" href="/custom/Home" style="text-transform: uppercase;" ><%=user.firstName%></a>
-                    <a id="idloggedusermenubar" type="button" value="<%=user.firstName%>" class="btn bi bi-person-fill text-warning" href="/custom/Home" style="text-transform: uppercase;" > </a>
-                    
+                <li class="nav-item  col-4 flex=wrap container-flex d-flex">
+                    <a id="idloggedusermenubar" type="button" value="<%=user.firstName%>" class="p-2 btn text-light w-100 h-100 bi bi-person-fill text-warning" href="/custom/Home" style="text-transform: uppercase;" > <br> <%=user.firstName%></a>
                   </li>
-                <li class="nav-item  container-flex d-flex">
-                    <a id="idloggedusermenubar" type="button" onclick="logout()" value="<%=user.firstName%>" class="p-2 btn text-light  w-100 h-100" href="#">LOGOUT</a>
-                    <button class="btn bi bi-power text-warning"onclick="logout()" ></button>
+                <li class="nav-item col-4 flex=wrap container-flex d-flex">
+                    <a id="idloggedusermenubar" type="button" onclick="logout()" value="<%=user.firstName%>" class="p-2 btn text-light  w-100 h-100 bi bi-power" href="#"><br> LOGOUT</a>
+                    
                 </li>
             </ul>
         </div>
