--- a/views/custommerPage.ejs
+++ b/views/custommerPage.ejs
@@ -6,22 +6,22 @@
       
 
       
-        <div class="container-flex"   style="height:100vh;  background-position: center; background-size: cover;"> 
+        <div class="container-flex"   style="height:85vh;  background-position: center; background-size: cover;"> 
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" style="height:100vh" >
                   <div class="carousel-inner h-100 bg-secondary">
                     <% comp.forEach((element,index) => { %>
                       <% if (index===0) { %>
                       <div   class="carousel-item h-100 active d-flex flex-column justify-content-center align-items-start h-100 " style=" background-image: url('<%= element.image1 %>');height: 100vh; background-position: center; background-size: cover;">
                         
-                        <div class="container-fluid w-100 col-lg-6 col-sm-12  rounded border flex-wrap" style="background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
+                        <div class="container-fluid w-100 col-lg-6 col-sm-12  rounded border flex-wrap" style="background-color:rgba(86, 99, 86, 0.762);; height: 100px;" >
                              
                             <form id="<%= element.CompanyID %>" action="/custom/customSearch" method="post"> 
                             <div class="container-fluid col-12 btn d-flex  ">
                                 <h6 class="col-lg-2 text-light btn ">Location </h6>
                                     <select class="col-lg-8  btn text-light  fw-lighter"  name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" id="idSearchText<%= element.CompanyID %>" >
-                                      <option style="background-color:rgba(186, 90, 21, 0.748); font-size: large;" class="col-5 SearchTextBox text-light fw-LIGHTER" value=""> All Cities </option>
+                                      <option style="background-color:rgb(86,99,86,.748);font-size: large;" class="col-5 SearchTextBox text-light fw-LIGHTER" value=""> All Cities </option>
                                         <% district.forEach(element=> { %>
-                                            <option style="background-color:rgba(186, 90, 21, 0.748); height: 100px;"class=" col-5 btn w-100 text-light fw-lighter" value="<%=element%>">
+                                            <option style="background-color:rgb(86,99,86,.748); height: 100px;"class=" col-5   w-100 text-light fw-lighter" value="<%=element%>">
                                         <%=element%>
                                         </option>
                                       <% }) %>
@@ -36,14 +36,15 @@
                       </div> 
                       <% } else { %>
                         <div class="carousel-item h-100 d-flex flex-column justify-content-center align-items-start h-100" style=" background-image: url('<%= element.image1 %>'); background-position: center; background-size: cover;">
-                          <div class="container-fluid w-100 col-lg-6 col-sm-12 rounded border " style="background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
+                          <div class="container-fluid w-100 col-lg-6 col-sm-12 rounded border " style="background-color:rgb(86,99,86,.748);; height: 100px;" >
                             <form id="<%= element.CompanyID %>" action="/custom/customSearch"  method="post">  
+                              
                               <div class="container-fluid col-12 btn d-flex  ">
                                 <h6 class="col-lg-2 text-light btn ">Location </h6>
                                     <select class="col-lg-8  btn text-light  fw-lighter"  name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" id="idSearchText<%= element.CompanyID %>" >
-                                      <option style="background-color:rgba(186, 90, 21, 0.748); font-size: large;" class="col-5 SearchTextBox text-light fw-LIGHTER" value=""> All Cities </option>
+                                      <option style="background-color:rgb(86,99,86,.748); font-size: large;" class="col-5 SearchTextBox text-light fw-LIGHTER" value=""> All Cities </option>
                                         <% district.forEach(element=> { %>
-                                            <option style="background-color:rgba(186, 90, 21, 0.748); height: 100px;"class=" col-5 btn w-100 text-light fw-lighter" value="<%=element%>">
+                                            <option style="background-color:rgb(86,99,86,.748); height: 100px;"class=" col-5 btn w-100 text-light fw-lighter" value="<%=element%>">
                                         <%=element%>
                                         </option>
                                       <% }) %>
@@ -68,6 +69,10 @@
                     <span class="carousel-control-next-icon " aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                   </button>
+
+                   
+
+                  </div>
             </div>
         </div>
         
