--- a/views/MenuBarCustomer.ejs
+++ b/views/MenuBarCustomer.ejs
@@ -35,13 +35,13 @@
           <div class="collapse navbar-collapse " id="navbarNav1">
             <ul class="navbar-nav align-items-start ">
               <!-- Example single danger button -->
-                <li class="nav-item col-4 flex=wrap container-flex d-flex   ">
+                <li class="nav-item col-4 flex-wrap container-flex d-flex   ">
                     <a id="idloggedusermenubar" type="button" value="<%=user.firstName%>" class="p-2 btn bi bi-house-up-fill  text-light w-100 h-100" href="/authenticate/custLogin"> <br>HOME</a>
                   </li>
-                <li class="nav-item  col-4 flex=wrap container-flex d-flex">
+                <li class="nav-item  col-4 flex-wrap container-flex d-flex">
                     <a id="idloggedusermenubar" type="button" value="<%=user.firstName%>" class="p-2 btn text-light w-100 h-100 bi bi-person-fill text-warning" href="/custom/Home" style="text-transform: uppercase;" > <br> <%=user.firstName%></a>
                   </li>
-                <li class="nav-item col-4 flex=wrap container-flex d-flex">
+                <li class="nav-item col-4 flex-wrap  container-flex d-flex">
                     <a id="idloggedusermenubar" type="button" onclick="logout()" value="<%=user.firstName%>" class="p-2 btn text-light  w-100 h-100 bi bi-power" href="#"><br> LOGOUT</a>
                     
                 </li>
