--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -92,7 +92,7 @@
   </div>
   
 <form   action="/authenticate/custLogin" method="post">
-    <div class="modal fade mr-2" id="customerLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade mr-2" id="customerLogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false" >
         <div class="modal-dialog modal-dialog-centered modal-md"> <!-- Use "modal-lg" or "modal-xl" for an extra-large modal -->
             <div class="modal-content" style="background-color: rgba(72, 93, 74, 0.84); width: 100%;">
                 <div class="modal-header">
@@ -313,7 +313,7 @@
   </button>
   
   <!-- Modal -->
-  <div class="modal fade " style="background-color: transparent;" id="idShowProgressModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal fade " style="background-color: rgba(0, 0, 0, 0.608);" id="idShowProgressModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog " style="background-color: transparent;">
       <div class="modal-content" style="background-color: transparent;">
         <!-- <div class="modal-header" style="background-color: transparent;"> -->
